2004-02-02  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSFont.m
	Try to get at least some font on keyed decoding.
	* Source/NSTextFieldCell.m
	* Source/NSImageCell.m
	* Source/NSImageView.m
	* Source/NSBox.m
	* Source/NSSplitView.m
	Added keyed decoding. 

2004-02-01  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSTextFieldCell.m (-setBackgroundColor:,
	-setDrawsBackground:, setTextColor:) tell the control, that the
	cell did update.
	
2004-01-30  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSBrowser.m
	* Source/NSBrowserCell.m
	* Source/NSButtonCell.m
	* Source/NSCell.m
	* Source/NSClipView.m
	* Source/NSColor.m
	* Source/NSControl.m
	* Source/NSCursor.m
	* Source/NSFont.m
	* Source/NSProgressIndicator.m
	* Source/NSScroller.m
	* Source/NSScrollView.m
	* Source/NSView.m
	Added keyed decoding. 

2004-01-26  Adam Fedor  <fedor@gnu.org>

	* /Headers/Additions/GNUstepGUI/GSHbox.h: Fix doc markup.
	* Headers/Additions/GNUstepGUI/GSTable.h: Idem.
	* Source/NSApplication.m: Idem.

	* Source/DocMakefile (GuiAdditions_AGSDOC_FILES): 
	  Add GuiAdditions.gsdoc

2004-01-26  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSPopUpButton.m (-setTitle:) Call
	[synchronizeTitleAndSelectedItem], this may as well belong into
	the cells setTitle: method instead.

2004-01-25  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSAffineTransform.m: Exchanged the code of
	appendTransform: and prePendTransform: to be Cocoa compatibile.
	(-concatenateWith:) replaced appendTransform: with prependTransform:.
	* Source/NSPrintOperation.m: (NSView
	-_displayPageInRect:atPlacement:withInfo:) Item.
	* Source/NSView.m (+initialize, -_rebuildCoordinates) Item.
	
2004-01-25 16:16  Alexander Malmberg <alexander@malmberg.org>

	* Source/NSStringDrawing.m: Big redesign.

	(cache_match, cache_lookup_string, cache_lookup_attributed_string,
	use_screen_fonts): New helper functions for caching layout
	information.

	(init_string_drawing, [NSAttributedString -drawAtPoint:],